[gd_scene load_steps=4 format=2]

[ext_resource path="res://Ressources/Ennemis/Enemy_1_Neon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnnemiSimpleLaser.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 297.034

[node name="EnnemiSimpleLaser" type="KinematicBody2D" groups=[
"Ennemi",
]]
position = Vector2( 0.311279, 0.923164 )
collision_layer = 2147483649
script = ExtResource( 2 )

[node name="EnnemiSimpleLaserImage" type="Sprite" parent="."]
rotation = 1.56826
texture = ExtResource( 1 )

[node name="EnnemiSimpleLaserCollision" type="CollisionPolygon2D" parent="."]
light_mask = -2147483647
polygon = PoolVector2Array( 26.4613, -0.633749, 10.3707, -8.24864, 4.40973, -7.98357, -10.3157, -23.3895, -11.385, -11.7818, -20.3242, -4.89532, -20.3242, 4.63985, -10.7523, 11.8149, -10.4678, 24.4702, 4.27879, 7.97439, 11.4302, 8.0406 )

[node name="EnnemiSimpleLaserPosition" type="Position2D" parent="."]
position = Vector2( 30.125, -0.625 )

[node name="EnnemiZoneDetection" type="Area2D" parent="."]

[node name="EnnemiSimpleLaserDetection" type="CollisionShape2D" parent="EnnemiZoneDetection"]
shape = SubResource( 1 )

[node name="EnnemiTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="body_entered" from="EnnemiZoneDetection" to="." method="_on_EnnemiZoneDetection_body_entered"]
[connection signal="body_exited" from="EnnemiZoneDetection" to="." method="_on_EnnemiZoneDetection_body_exited"]
[connection signal="timeout" from="EnnemiTimer" to="." method="_on_EnnemiTimer_timeout"]
